--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Test_app</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="main_info">Human Resource Management</string>
+    <string name="load_more_normal_main">정보 더보기</string>
+    <string name="load_more_loading_main">정보검색 중...</string>
 </resources>
