--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="load_more_normal_main">정보 더보기</string>
     <string name="load_more_loading_main">정보검색 중...</string>
 
-    <string name="server_domain">192.168.0.5</string>
+    <string name="server_domain">192.168.0.8</string>
+    <string name="title_activity_human_add">인사정보 등록</string>
 </resources>
