--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="server_domain">192.168.0.8</string>
     <string name="title_activity_human_add">인사정보 등록</string>
+    <string name="title_activity_human_info_update">HumanInfoUpdate</string>
 </resources>
